feat: auth-required UX, login return URL, profile liked replies
- ReviewLike: extend DAO/service for profile use cases
- LoginRedirectUtils + WebAuthConfig: preserve intended URL after login
- AuthController: support redirect target; login JSP passes return URL
- auth-required-modal tag/JS for guests on cars, reviews, reactions
- Profile: liked reply cards, connections modal tweaks, controller + tests
- CSS/JS: components, reviews, profile cards, reactions flow

Made-with: Cursor